@@ -1,3 +1,8 @@
+2001-06-15  Andrej Borsenkow  <bor@zsh.org>
+
+	* 14931: Src/Modules/tcp.c, Src/Modules/zftp.c: fix length
+	calculation in tcp_connect and zftp_open
+
 2001-06-14  Peter Stephenson  <pws@csr.com>
 
 	* 14915: Doc/Zsh/builtins.yo, Doc/Zsh/Params.yo, Src/builtin.c,
